--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -91,6 +91,7 @@ dependencies:
   path_provider: ^2.1.1
   flutter_dotenv: ^5.0.2
   http: ^1.1.0
+  connectivity_checker: ^1.1.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
