--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -92,6 +92,7 @@ dependencies:
   flutter_dotenv: ^5.0.2
   http: ^1.1.0
   connectivity_checker: ^1.1.0
+  getwidget: ^4.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
