--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -94,7 +94,7 @@ dependencies:
   connectivity_checker: ^1.1.0
   getwidget: ^4.0.0
   ticket_widget: ^1.0.2
-  widgets_to_image: any
+  # widgets_to_image: any
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
